@@ -21,16 +21,22 @@
 
 set -e
 
+test 11 -eq `genltl --dac | ltlfilt --pi1 -c`
 test 11 -eq `genltl --dac | ltlfilt --syntactic-safety -c`
 test 37 -eq `genltl --dac | ltlfilt --safety -c`
 test 'Fp0' = `genltl --dac | ltlfilt --syntactic-guarantee`
 test 'Fp0' = `genltl --dac | ltlfilt --guarantee`
+test 'Fp0' = `genltl --dac | ltlfilt --sigma1`
+test 23 -eq `genltl --dac | ltlfilt --delta1 -c`
 test 25 -eq `genltl --dac | ltlfilt --syntactic-obligation -c`
 test 40 -eq `genltl --dac | ltlfilt --obligation -c`
+test 42 -eq `genltl --dac | ltlfilt --pi2 -c`
 test 47 -eq `genltl --dac | ltlfilt --syntactic-recurrence -c`
 test 52 -eq `genltl --dac | ltlfilt --recurrence -c`
+test 29 -eq `genltl --dac | ltlfilt --sigma2 -c`
 test 29 -eq `genltl --dac | ltlfilt --syntactic-persistence -c`
 test 41 -eq `genltl --dac | ltlfilt --persistence -c`
+test 48 -eq `genltl --dac | ltlfilt --delta2 -c`
 test 'G!p0 | F(p0 & (!p1 W p2))' = "`genltl --dac |
      ltlfilt -v --obligation | ltlfilt --persistence`"
 test 12 -eq `genltl --dac |
