@@ -6,6 +6,9 @@ New in spot 2.12.0.dev (not yet released)
     edges leading to dead-ends.  See the description of
     restrict_dead_end_edges_here() below.
 
+  - ltlfilt learned --pi1, --sigma1, --delta1, --pi2, --sigma2, and
+    --delta2 to filter according to classes Π₁,Σ₁,Δ₁,Π₂,Σ₂, and Δ₂.
+
   Library:
 
    - restrict_dead_end_edges_here() can reduce non-determinism (but
@@ -112,7 +115,7 @@ New in spot 2.12  (2024-05-16)
     - EXPL: explicit splitting of each state as before
     - SEMISYM: The outgoing transition of each state are encoded
       as a bdd; Works better for larger number of input APs
-    - FULLYSYM: The automaton is first translated into a 
+    - FULLYSYM: The automaton is first translated into a
       fully symbolic version, then split.
     - AUTO: Let the heuristic decide what to do.
 
